# Projet_NLP

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  Procfile  README.md  pyproject.toml  render.yaml  render_build.sh  requirements.txt  run_api.py  run_frontend.py
api/: main.py
api/routes/: chat.py  health.py
api/schemas/: request.py  response.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: ARCHITECTURE.md  api.md  deployment.md
frontend/: app.js  index.html  styles.css
scripts/: benchmark.py  index_conversations.py  prepare_data.py
src/config/: logging_config.py  settings.py
src/core/: cache.py  conversation_memory.py  embeddings.py  llm_handler.py  metrics.py  rate_limiter.py  reranker.py  vector_store.py
src/models/: schemas.py
src/services/: chatbot_service.py
src/utils/: data_loader.py  text_processor.py  validators.py
tests/: conftest.py
tests/fixtures/: sample_conversations.json
tests/integration/: test_api.py
tests/unit/: test_chatbot_service.py  test_embeddings.py  test_llm_handler.py  test_vector_store.py
